Added collapsible navigation

--- a/index.html
+++ b/index.html
@@ -3,12 +3,47 @@
 
 <head>
     <meta name="viewport" content="width=device-width initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-    
+
     <title>The Monkees</title>
 </head>
+
 <body>
-    
+    <header>
+        <nav class="color">
+            <div class="logo">
+                <a href="#"><img src="assets/images/monkees-logo.png"></a>
+            </div>
+
+
+            <div class="navigation-links">
+                <input type="checkbox" id="navigation-toggle">
+                <label for="navigation-toggle" class="label-toggle">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </label>
+                <ul class="navigation-list">
+                    <li class="links"><a href="#">Home</a></li>
+                    <li class="links"><a href="#">Band</a></li>
+                    <li class="links"><a href="#">Music</a></li>
+                    <li class="links"><a href="#">Videos</a></li>
+                    <li class="links"><a href="#">Photos</a></li>
+                </ul>
+            </div>
+            <div class="navigation-social">
+                <ul class="navigation-list">
+                    <li class="social-links"><a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></li>
+                    <li class="social-links"><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                    <li class="social-links"><a href="#"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <section></section>
+    <footer></footer>
 </body>
 
 </html>
