Added media page - video and audio

--- a/band.html
+++ b/band.html
@@ -28,8 +28,7 @@
                 <ul class="navigation-list">
                     <li class="links"><a href="index.html">Home</a></li>
                     <li class="links"><a href="band.html">Band</a></li>
-                    <li class="links"><a href="#">Music</a></li>
-                    <li class="links"><a href="#">Videos</a></li>
+                    <li class="links"><a href="media.html">Media</a></li>
                     <li class="links"><a href="#">Photos</a></li>
                 </ul>
             </div>
