shuffled and clean the code a little, added the rest of content and tweaked styles

--- a/media.html
+++ b/media.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" />
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Exo:400,600" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 
     <title>The Monkees</title>
@@ -14,7 +16,7 @@
     <header>
         <nav>
             <div class="logo">
-                <a href="#"><img src="assets/images/monkees-logo.png"></a>
+                <a href="index.html"><img src="assets/images/monkees-logo.png"></a>
             </div>
 
             <div class="navigation-links">
@@ -29,15 +31,15 @@
                     <li class="links"><a href="index.html">Home</a></li>
                     <li class="links"><a href="band.html">Band</a></li>
                     <li class="links"><a href="media.html">Media</a></li>
-                    <li class="links"><a href="#">Photos</a></li>
+                    <li class="links"><a href="photos.html">Photos</a></li>
                 </ul>
             </div>
 
             <div class="navigation-social">
                 <ul class="navigation-list">
-                    <li class="social-links"><a href="#"><i class="fab fa-facebook-square"></i></a></li>
-                    <li class="social-links"><a href="#"><i class="fab fa-twitter-square"></i></a></li>
-                    <li class="social-links"><a href="#"><i class="fab fa-youtube-square"></i></a></li>
+                    <li class="social-links"><a href="https://www.facebook.com/TheMonkees/"><i class="fab fa-facebook-square"></i></a></li>
+                    <li class="social-links"><a href="https://twitter.com/themonkees?lang=en"><i class="fab fa-twitter-square"></i></a></li>
+                    <li class="social-links"><a href="https://www.youtube.com/user/themonkees"><i class="fab fa-youtube-square"></i></a></li>
                 </ul>
             </div>
         </nav>
@@ -56,7 +58,7 @@
             <div class="music-section">
                 <h1>The Monkees</h1>
                 <div class="album">
-                    <img src="assets/images/album-1.jpg">
+                    <img src="assets/images/music-page/albums/album-1.jpg">
                     <div class="song-info">
                         <h4>Last Train to Clarksville</h4>
                         <p><strong>Released:</strong> 16 August 1966</p>
@@ -72,7 +74,7 @@
 
                 <h1>The Birds, The Bees and The Monkees</h1>
                 <div class="album">
-                    <img src="assets/images/album-2.jpg">
+                    <img src="assets/images/music-page/albums/album-2.jpg">
                     <div class="song-info">
                         <h4>Daydream Believer</h4>
                         <p><strong>Released:</strong> October 25, 1967</p>
@@ -87,7 +89,7 @@
 
                 <h1>More of the Monkees</h1>
                 <div class="album">
-                    <img src="assets/images/album-3.jpg">
+                    <img src="assets/images/music-page/albums/album-3.jpg">
                     <div class="song-info">
                         <h4>Stepping Stone</h4>
                         <p><strong>Released:</strong> 12 November 1966</p>
@@ -120,11 +122,9 @@
             <h3>SOCIAL</h3>
             <hr>
             <ul>
-                <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
-                <li><a href="#"><i class="fab fa-twitter-square"></i></a></a>
-                </li>
-                <li><a href="#"><i class="fab fa-youtube-square"></i></a></a>
-                </li>
+                <li><a href="https://www.facebook.com/TheMonkees/"><i class="fab fa-facebook-square"></i></a></li>
+                <li><a href="https://twitter.com/themonkees?lang=en"><i class="fab fa-twitter-square"></i></a></li>
+                <li><a href="https://www.youtube.com/user/themonkees"><i class="fab fa-youtube-square"></i></a></li>
             </ul>
         </div>
 
