--- a/media.html
+++ b/media.html
@@ -46,19 +46,18 @@
     </header>
 
 
-    <section>
-        <div class="background">
-        </div>
+    <main>
+        <div class="background"></div>
         <div class="wrapper">
 
-            <div class="video-section">
+            <section class="video-section">
                 <iframe src="https://www.youtube.com/embed/xvqeSJlgaNk?rel=0&amp;start=20" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-            </div>
+            </section>
 
-            <div class="music-section">
+            <section class="music-section">
                 <h1>The Monkees</h1>
-                <div class="album">
-                    <img src="assets/images/music-page/albums/album-1.jpg">
+                <article class="album">
+                    <img src="assets/images/music-page/albums/album-1.jpg" alt="album-cover-the-monkees">
                     <div class="song-info">
                         <h4>Last Train to Clarksville</h4>
                         <p><strong>Released:</strong> 16 August 1966</p>
@@ -70,11 +69,11 @@
                     </audio>
                     </div>
 
-                </div>
+                </article>
 
                 <h1>The Birds, The Bees and The Monkees</h1>
-                <div class="album">
-                    <img src="assets/images/music-page/albums/album-2.jpg">
+                <article class="album">
+                    <img src="assets/images/music-page/albums/album-2.jpg" alt="album-cover-the-birds-the-bees-and-the-monkees">
                     <div class="song-info">
                         <h4>Daydream Believer</h4>
                         <p><strong>Released:</strong> October 25, 1967</p>
@@ -85,11 +84,11 @@
                         <source src="assets/audio/Daydream.mp3" type="audio/mpeg">
                     </audio>
                     </div>
-                </div>
+                </article>
 
                 <h1>More of the Monkees</h1>
-                <div class="album">
-                    <img src="assets/images/music-page/albums/album-3.jpg">
+                <article class="album">
+                    <img src="assets/images/music-page/albums/album-3.jpg" alt="album-cover-more-of-the-monkees">
                     <div class="song-info">
                         <h4>Stepping Stone</h4>
                         <p><strong>Released:</strong> 12 November 1966</p>
@@ -110,15 +109,16 @@
                         <source src="assets/audio/Believer.mp3" type="audio/mpeg">
                     </audio>
                     </div>
-                </div>
-            </div>
+                </article>
+            </section>
+
         </div>
-    </section>
+    </main>
 
 
     <footer class="footer">
 
-        <div class="social-section">
+        <section class="social-section">
             <h3>SOCIAL</h3>
             <hr>
             <ul>
@@ -126,16 +126,16 @@
                 <li><a href="https://twitter.com/themonkees?lang=en"><i class="fab fa-twitter-square"></i></a></li>
                 <li><a href="https://www.youtube.com/user/themonkees"><i class="fab fa-youtube-square"></i></a></li>
             </ul>
-        </div>
+        </section>
 
-        <div class="contact-section">
+        <section class="contact-section">
             <h3>CONTACT US</h3>
             <hr>
             <ul>
                 <li><a href="#"><i class="fas fa-envelope-square"></i><span>info@themonkees.com</span></a></li>
                 <li><a href="#"><i class="fas fa-phone-square"></i><span id="last">098-090-0990</span></a></li>
             </ul>
-        </div>
+        </section>
 
     </footer>
 
