Changed boooking form buttons and fixed the Installation part of the readme

--- a/index.html
+++ b/index.html
@@ -382,10 +382,10 @@
                             <textarea class="form-control" id="details" rows="6"></textarea>
                             <p class="help-block">We'll never share your personal details with anyone</p>
                         </div>
-                        <div class="button-center">
-                            <button type="reset">Reset Form</button>
-                            <p>Or</p>
+                        <div class="buttons">
+                            <!-- Fix buttons, move submit to left and make reset smaller. Delete ''OR''-->
                             <button type="submit">Confirm Booking</button>
+                            <button type="reset">Reset Form</button>
                         </div>
                     </form>
                 </div>
