Tidied code a bit

--- a/media.html
+++ b/media.html
@@ -1,23 +1,19 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta name="viewport" content="width=device-width initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" />
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Acme|Exo:400,600" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-
     <title>The Monkees</title>
 </head>
-
 <body>
     <header>
         <nav>
             <div class="logo">
                 <a href="index.html"><img src="assets/images/monkees-logo.png"></a>
             </div>
-
             <div class="navigation-links">
                 <input type="checkbox" id="navigation-toggle">
                 <label for="navigation-toggle" class="label-toggle">
@@ -25,7 +21,6 @@
                     <span></span>
                     <span></span>
                 </label>
-
                 <ul class="navigation-list">
                     <li class="links"><a href="index.html">Home</a></li>
                     <li class="links"><a href="band.html">Band</a></li>
@@ -33,7 +28,6 @@
                     <li class="links"><a href="photos.html">Photos</a></li>
                 </ul>
             </div>
-
             <div class="navigation-social">
                 <ul class="navigation-list">
                     <li class="social-links"><a href="https://www.facebook.com/TheMonkees/"><i class="fab fa-facebook-square"></i></a></li>
@@ -43,16 +37,12 @@
             </div>
         </nav>
     </header>
-
-
     <main>
         <div class="background"></div>
         <div class="wrapper">
-
             <section class="video-section">
                 <iframe src="https://www.youtube.com/embed/xvqeSJlgaNk?rel=0&amp;start=20" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             </section>
-
             <section class="music-section">
                 <h1>The Monkees</h1>
                 <article class="album">
@@ -67,9 +57,7 @@
                         <source src="assets/audio/Clarksville.mp3" type="audio/mpeg">
                     </audio>
                     </div>
-
                 </article>
-
                 <h1>The Birds, The Bees and The Monkees</h1>
                 <article class="album">
                     <img src="assets/images/music-page/albums/album-2.jpg" alt="album-cover-the-birds-the-bees-and-the-monkees">
@@ -84,7 +72,6 @@
                     </audio>
                     </div>
                 </article>
-
                 <h1>More of the Monkees</h1>
                 <article class="album">
                     <img src="assets/images/music-page/albums/album-3.jpg" alt="album-cover-more-of-the-monkees">
@@ -110,15 +97,11 @@
                     </div>
                 </article>
             </section>
-
         </div>
     </main>
-
-
     <footer class="footer">
-
         <section class="social-section">
-            <h3>SOCIAL</h3>
+            <h3>Social</h3>
             <hr>
             <ul>
                 <li><a href="https://www.facebook.com/TheMonkees/"><i class="fab fa-facebook-square"></i></a></li>
@@ -126,16 +109,14 @@
                 <li><a href="https://www.youtube.com/user/themonkees"><i class="fab fa-youtube-square"></i></a></li>
             </ul>
         </section>
-
         <section class="contact-section">
-            <h3>CONTACT US</h3>
+            <h3>Contact us</h3>
             <hr>
             <ul>
                 <li><a href="#"><i class="fas fa-envelope-square"></i><span>info@themonkees.com</span></a></li>
                 <li><a href="#"><i class="fas fa-phone-square"></i><span id="last">098-090-0990</span></a></li>
             </ul>
         </section>
-
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
