--- a/band.html
+++ b/band.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" />
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Acme|Exo:400,600" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
     <title>The Monkees</title>
 </head>
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <div class="logo">
-                <a href="index.html"><img src="assets/images/monkees-logo.png" alt="monkees-logo"></a>
+                <a href="index.html"><img src="assets/images/monkees-logo.png" alt="band-logo"></a>
             </div>
             <div class="navigation-links">
                 <input type="checkbox" id="navigation-toggle">
