--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" />
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Acme|Exo:400,600" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
     <title>The Monkees</title>
 </head>
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <div class="logo">
-                <a href="index.html"><img src="assets/images/monkees-logo.png" alt="monkees-logo"></a>
+                <a href="index.html"><img src="assets/images/monkees-logo.png" alt="band-logo"></a>
             </div>
             <div class="navigation-links">
                 <input type="checkbox" id="navigation-toggle">
@@ -42,7 +42,7 @@
         </div>
         <div class="wrapper">
             <section class="publicity-container">
-                <div class="image"><img src="assets/images/home-page/monkees.png"></div>
+                <div class="image"><img src="assets/images/home-page/monkees.png" alt="publicity-background-image"></div>
                 <p>
                     The Monkees are now booking events, parties and weddings all over the world! Don't miss out!
                 </p>
@@ -95,16 +95,17 @@
                         <input type="checkbox" id="news-toggle-4">
                         <p>Almost fifty years ago, in May 1968, Michael Nesmith ventured to Nashville to record a series of groundbreaking sessions with local musicians. What they produced is now recognized as the foundation of the country-rock and alt-country
                             movements.
-                            <br><br> “I could just feel this happening, that there was this ‘thing,’” recalled Nez. “So, I headed off to Nashville to see if I couldn’t get some of the Nashville country thing into the rock’n’roll or vice versa.” Nez’s
+                            <br><br> 
+                            “I could just feel this happening, that there was this ‘thing,’” recalled Nez. “So, I headed off to Nashville to see if I couldn’t get some of the Nashville country thing into the rock’n’roll or vice versa.” Nez’s
                             intuition was correct; he was on the leading edge of a new genre. His exploratory work caught the attention of legendary RCA A&R man Felton Jarvis who had produced the Nashville sessions with Nez. In February 1970, Jarvis signed
                             Nez and his new band, the First National Band (pedal steel virtuoso Red Rhodes, bassist John London, and drummer John Ware), to a deal with the venerable imprint and produced their first record, Magnetic South.
-                            < Despite the eight innovative country-rock LP’s Nesmith created between 1970 and 1978, he is one of the less heralded architects of the genre. The First National Band’s three classic albums -- Magnetic South, Loose Salute, and Nevada Fighter -- spawned
-                                four charting singles, including “Joanne” which reached #21 on the Billboard Top 100. However, live success for the fledgling band was harder to come by and the musicians Nez collected to bring his country-rock dream to market
-                                soon scattered. Nez played out his remaining RCA albums with Red Rhodes and toured with him throughout the ‘70s. Yet the full-blown sounds of the First National Band were never to be heard on the concert stage again. In January
-                                2018, Michael Nesmith will bring this music back to the live arena with a series of shows focused on his RCA recordings, including a show on January 25th at the Troubadour in Los Angeles, where he debuted the First National
-                                Band in March 1970. Songs like “Different Drum” (a Top 20 hit for Linda Ronstadt & The Stone Poneys), “Listen to the Band”, “Some of Shelly’s Blues” (covered by the Nitty Gritty Dirt Band), and “Silver Moon” will join lesser-known
-                                but equally transcendent album sides in a rebirth of what was labeled by critics as “the greatest music that you never heard.” Where to see Michael Nesmith & The First National: January 23, 2018 The Coach House, San Juan Capistrano,
-                                CA - Get Tickets January 25, 2018 The Troubadour, West Hollywood, CA - SOLD OUT TICKETS ON SALE THIS FRIDAY.</p>
+                            Despite the eight innovative country-rock LP’s Nesmith created between 1970 and 1978, he is one of the less heralded architects of the genre. The First National Band’s three classic albums -- Magnetic South, Loose Salute, and Nevada Fighter -- spawned
+                            four charting singles, including “Joanne” which reached #21 on the Billboard Top 100. However, live success for the fledgling band was harder to come by and the musicians Nez collected to bring his country-rock dream to market
+                            soon scattered. Nez played out his remaining RCA albums with Red Rhodes and toured with him throughout the ‘70s. Yet the full-blown sounds of the First National Band were never to be heard on the concert stage again. In January
+                            2018, Michael Nesmith will bring this music back to the live arena with a series of shows focused on his RCA recordings, including a show on January 25th at the Troubadour in Los Angeles, where he debuted the First National
+                            Band in March 1970. Songs like “Different Drum” (a Top 20 hit for Linda Ronstadt & The Stone Poneys), “Listen to the Band”, “Some of Shelly’s Blues” (covered by the Nitty Gritty Dirt Band), and “Silver Moon” will join lesser-known
+                            but equally transcendent album sides in a rebirth of what was labeled by critics as “the greatest music that you never heard.” Where to see Michael Nesmith & The First National: January 23, 2018 The Coach House, San Juan Capistrano,
+                            CA - Get Tickets January 25, 2018 The Troubadour, West Hollywood, CA - SOLD OUT TICKETS ON SALE THIS FRIDAY.</p>
                         <label for="news-toggle-4" class="news-label-toggle"><i class="fas fa-plus-square"></i><i class="fas fa-minus-square"></i><span class="more"> Read More</span><span class="less">Read Less</span></label>
                     </article>
                     <article class="news">
@@ -276,10 +277,8 @@
             <hr>
             <ul>
                 <li><a href="https://www.facebook.com/TheMonkees/"><i class="fab fa-facebook-square"></i></a></li>
-                <li><a href="https://twitter.com/themonkees?lang=en"><i class="fab fa-twitter-square"></i></a></a>
-                </li>
-                <li><a href="https://www.youtube.com/user/themonkees"><i class="fab fa-youtube-square"></i></a></a>
-                </li>
+                <li><a href="https://twitter.com/themonkees?lang=en"><i class="fab fa-twitter-square"></i></a></li>
+                <li><a href="https://www.youtube.com/user/themonkees"><i class="fab fa-youtube-square"></i></a></li>
             </ul>
         </section>
 
@@ -288,25 +287,25 @@
             <hr>
             <ul>
                 <li><a href="#"><i class="fas fa-envelope-square"></i><span>info@themonkees.com</span></a></li>
-                <li><a href="#"><i class="fas fa-phone-square"></i><span id="last">098-090-0990</span></a></li>
+                <li><a href="#"><i class="fas fa-phone-square"></i><span>098-090-0990</span></a></li>
             </ul>
         </section>
 
     </footer>
-    <div class="modal fade" id="bookingModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal fade" id="bookingModal" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="myModalLabel">Throw a party with music played by a world class band THE MONKEES</h4>
+                    <h4 class="modal-title">Throw a party with music played by a world class band THE MONKEES</h4>
                     <br>
-                    <h4 class="modal-title" id="myModalLabel">We will light up your event with unforgettable sounds and performances</h4>
+                    <h4 class="modal-title">We will light up your event with unforgettable sounds and performances</h4>
                 </div>
                 <div class="modal-body">
                     <h5>Contact us</h5>
                     <div class="contact-info">
                         <div class="contact-center">
-                            <a href="#" class="info"><i class="fas fa-phone-square"></i><span id="last">098-090-0990</span></a>
+                            <a href="#" class="info"><i class="fas fa-phone-square"></i><span>098-090-0990</span></a>
                             <div id="connect"></div>
                             <a href="#" class="info"><i class="fas fa-envelope-square"></i><span>info@themonkees.com</span></a>
                         </div>
@@ -323,7 +322,7 @@
                         </div>
                         <div class="form-group">
                             <label for="phone">Phone Number <span class="require">[Required]</span></label>
-                            <input type="text" class="form-control" id="form" required>
+                            <input type="text" class="form-control" id="phone" required>
                         </div>
                         <div class="form-group">
                             <label for="type">Type of Event <span class="require">[Required]</span></label>
